revert to gradle 8.11